<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="@dimen/_300sdp"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_packup_are_you_want_to_sync_data"
        android:textSize="18sp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logoIv"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView3"
        android:layout_marginBottom="@dimen/_25sdp">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:background="@drawable/rounded_border"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/btn_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:background="@drawable/rounded_border"
            android:text="@string/ok"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_25sdp"/>
    </LinearLayout>

</RelativeLayout>