<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment" >
    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
  <View
      android:id="@+id/view2"
      android:layout_width="0dp"
      android:layout_height="@dimen/_100sdp"
      android:background="@drawable/wave"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/topView" />


  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/imageView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_32sdp"
      android:layout_marginLeft="@dimen/_32sdp"
      android:layout_marginTop="@dimen/_24sdp"
      android:layout_marginEnd="@dimen/_32sdp"
      android:layout_marginRight="@dimen/_32sdp"
      android:background="@drawable/ic_user"
      app:layout_constraintEnd_toEndOf="@+id/topView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:src="@tools:sample/avatars" />

  <TextView
      android:id="@+id/profile_tv_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/ic_email"
      android:drawableLeft="@drawable/ic_email"
      android:drawablePadding="@dimen/_10sdp"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:textColor="@color/black"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.115"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view2"
      tools:text="moussam760@gmail.com" />


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:drawableStart="@drawable/ic_next"
      android:drawableLeft="@drawable/ic_email"
      android:drawablePadding="@dimen/_10sdp"
      android:gravity="left"
      android:padding="@dimen/_8sdp"
      android:textColor="@color/black"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.065"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_tv_email"
      android:text="@string/Trip_done" />




  <TextView
      android:id="@+id/profile_tv_done_count"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:drawablePadding="@dimen/_10sdp"
      android:gravity="left"
      android:padding="@dimen/_8sdp"
      android:textColor="@color/black"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.565"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_tv_email"
      tools:text="0" />

  <TextView
      android:id="@+id/profile_tv_cancel_count"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:drawablePadding="@dimen/_10sdp"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:textColor="@color/black"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.565"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_tv_done_count"
      tools:text="0" />

  <TextView

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:drawableStart="@drawable/ic_back"
      android:drawablePadding="@dimen/_10sdp"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:textColor="@color/black"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.069"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_tv_done_count"
      android:text="@string/Trip_cancel"
      android:drawableLeft="@drawable/ic_back" />


  <Button
      android:id="@+id/profile_btn_sync"
      android:layout_width="137dp"
      android:layout_height="58dp"
      android:layout_marginTop="56dp"
      android:background="@drawable/rounded_border"
      android:drawablePadding="@dimen/_10sdp"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:text="@string/sync"
      android:textColor="@color/black"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/profile_btn_log_out"
      app:layout_constraintHorizontal_bias="0.573"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_tv_cancel_count"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/profile_btn_log_out"
      android:layout_width="137dp"
      android:layout_height="58dp"
      android:layout_marginTop="56dp"
      android:layout_marginEnd="40dp"
      android:layout_marginRight="40dp"
      android:background="@drawable/rounded_border"
      android:drawablePadding="@dimen/_10sdp"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:text="@string/Logout"
      android:textColor="@color/black"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_tv_cancel_count"
      app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>